@@ -1,41 +1,47 @@
 package dev.ftb.mods.ftbquests.client.gui.quests;
 
-import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.PoseStack;
+import net.minecraft.ChatFormatting;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.tags.TagKey;
+import net.minecraft.world.item.Item;
+
 import dev.architectury.networking.NetworkManager;
+
+import dev.ftb.mods.ftblibrary.client.gui.WidgetType;
+import dev.ftb.mods.ftblibrary.client.gui.input.MouseButton;
+import dev.ftb.mods.ftblibrary.client.gui.screens.AbstractButtonListScreen;
+import dev.ftb.mods.ftblibrary.client.gui.theme.Theme;
+import dev.ftb.mods.ftblibrary.client.gui.widget.Button;
+import dev.ftb.mods.ftblibrary.client.gui.widget.ContextMenuItem;
+import dev.ftb.mods.ftblibrary.client.gui.widget.Panel;
+import dev.ftb.mods.ftblibrary.client.gui.widget.SimpleTextButton;
+import dev.ftb.mods.ftblibrary.client.icon.IconHelper;
+import dev.ftb.mods.ftblibrary.client.util.PositionedIngredient;
 import dev.ftb.mods.ftblibrary.icon.Color4I;
 import dev.ftb.mods.ftblibrary.icon.Icons;
 import dev.ftb.mods.ftblibrary.icon.ItemIcon;
-import dev.ftb.mods.ftblibrary.ui.*;
-import dev.ftb.mods.ftblibrary.ui.input.MouseButton;
-import dev.ftb.mods.ftblibrary.ui.misc.AbstractButtonListScreen;
 import dev.ftb.mods.ftblibrary.util.TooltipList;
-import dev.ftb.mods.ftblibrary.util.client.PositionedIngredient;
 import dev.ftb.mods.ftbquests.api.ItemFilterAdapter;
+import dev.ftb.mods.ftbquests.client.FTBQuestsClient;
 import dev.ftb.mods.ftbquests.client.gui.ContextMenuBuilder;
 import dev.ftb.mods.ftbquests.integration.item_filtering.ItemMatchingSystem;
 import dev.ftb.mods.ftbquests.net.EditObjectMessage;
 import dev.ftb.mods.ftbquests.net.GiveItemToPlayerMessage;
 import dev.ftb.mods.ftbquests.net.ReorderItemMessage;
 import dev.ftb.mods.ftbquests.quest.TeamData;
+import dev.ftb.mods.ftbquests.quest.task.CheckmarkTask;
 import dev.ftb.mods.ftbquests.quest.task.ItemTask;
 import dev.ftb.mods.ftbquests.quest.task.Task;
 import dev.ftb.mods.ftbquests.quest.theme.property.ThemeProperties;
 import dev.ftb.mods.ftbquests.util.TextUtils;
-import net.minecraft.ChatFormatting;
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.tags.TagKey;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ItemStack;
 
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import org.joml.Matrix3x2fStack;
 
 public class TaskButton extends Button {
 	private final QuestScreen questScreen;
@@ -62,13 +68,13 @@ public class TaskButton extends Button {
 	@Override
 	public void onClicked(MouseButton button) {
 		if (button.isLeft()) {
-			if (task.getQuestFile().canEdit() && ScreenWrapper.hasAltDown()) {
+			if (task.getQuestFile().canEdit() && Minecraft.getInstance().hasAltDown()) {
 				task.onEditButtonClicked(questScreen);
 			} else {
 				boolean canClick = task.isValid()
-						&& questScreen.file.selfTeamData.canStartTasks(task.getQuest())
-						&& !questScreen.file.selfTeamData.isCompleted(task);
-				task.onButtonClicked(this, canClick);
+						&& FTBQuestsClient.getClientPlayerData().canStartTasks(task.getQuest())
+						&& !FTBQuestsClient.getClientPlayerData().isCompleted(task);
+				task.client().onButtonClicked(task, this, canClick);
 			}
 		} else if (button.isRight() && questScreen.file.canEdit()) {
 			playClickSound();
@@ -83,7 +89,7 @@ public class TaskButton extends Button {
 			)));
 
 			if (task instanceof ItemTask itemTask && !itemTask.getItemStack().isEmpty()) {
-				var tags = itemTask.getItemStack().getItem().builtInRegistryHolder().tags().toList();
+				var tags =  itemTask.getItemStack().getItem().builtInRegistryHolder().tags().toList();
 				if (!tags.isEmpty() && !ItemMatchingSystem.INSTANCE.isItemFilter(itemTask.getItemStack())) {
 					for (ItemFilterAdapter adapter : ItemMatchingSystem.INSTANCE.adapters()) {
 						if (adapter.hasItemTagFilter()) {
@@ -91,7 +97,7 @@ public class TaskButton extends Button {
 									ThemeProperties.RELOAD_ICON.get(),
 									b -> {
 										if (tags.size() == 1) {
-											setTagFilterAndSave(itemTask, adapter, tags.get(0));
+											setTagFilterAndSave(itemTask, adapter, tags.getFirst());
 										} else {
 											new TagSelectionScreen(tags, itemTask, adapter).openGui();
 										}
@@ -120,24 +126,6 @@ public class TaskButton extends Button {
 		}
 	}
 
-	private static String stackToString(ItemStack itemStack) {
-		StringBuilder builder = new StringBuilder(BuiltInRegistries.ITEM.getKey(itemStack.getItem()).toString());
-
-		String compData = itemStack.getComponents().stream()
-				.filter(c -> !c.value().equals(itemStack.getItem().components().get(c.type())))
-				.map(c -> c.type() + "=\"" + c.value() + "\"")
-				.collect(Collectors.joining(","));
-		if (!compData.isEmpty()) {
-			builder.append("[").append(compData).append("]");
-		}
-
-		if (itemStack.getCount() > 1) {
-			builder.append(" ").append(itemStack.getCount());
-		}
-
-		return builder.toString();
-	}
-
 	private void setTagFilterAndSave(ItemTask itemTask, ItemFilterAdapter adapter, TagKey<Item> tag) {
 		itemTask.setStackAndCount(adapter.makeTagFilterStack(tag), itemTask.getItemStack().getCount());
 
@@ -157,7 +145,7 @@ public class TaskButton extends Button {
 	public void addMouseOverText(TooltipList list) {
 		questScreen.addInfoTooltip(list, task);
 
-		TeamData teamData = questScreen.file.selfTeamData;
+		TeamData teamData = FTBQuestsClient.getClientPlayerData();
 
 		task.addMouseOverHeader(list, teamData, Minecraft.getInstance().options.advancedItemTooltips);
 
@@ -198,38 +186,41 @@ public class TaskButton extends Button {
 
 	@Override
 	public void drawIcon(GuiGraphics graphics, Theme theme, int x, int y, int w, int h) {
-		task.drawGUI(questScreen.file.selfTeamData, graphics, x, y, w, h);
+		if (task instanceof CheckmarkTask) {
+			TeamData teamData = FTBQuestsClient.getClientPlayerData();
+
+			var icon = ThemeProperties.CHECKMARK_TASK_INACTIVE.get(task);
+			if (teamData.isCompleted(task)) {
+				icon = ThemeProperties.CHECKMARK_TASK_ACTIVE.get(task);
+			}
+
+			IconHelper.renderIcon(icon, graphics, x, y, w, h);
+			return;
+		}
+
+		IconHelper.renderIcon(task.getIcon(), graphics, x, y, w, h);
 	}
 
 	@Override
 	public void draw(GuiGraphics graphics, Theme theme, int x, int y, int w, int h) {
 		int bs = h >= 32 ? 32 : 16;
-		GuiHelper.setupDrawing();
 		drawBackground(graphics, theme, x, y, w, h);
 		drawIcon(graphics, theme, x + (w - bs) / 2, y + (h - bs) / 2, bs, bs);
 
-		if (questScreen.file.selfTeamData == null) {
-			return;
-		} else if (questScreen.getContextMenu().isPresent()) {
-			//return;
-		}
-
-		PoseStack poseStack = graphics.pose();
-		if (questScreen.file.selfTeamData.isCompleted(task)) {
-			poseStack.pushPose();
-			poseStack.translate(0, 0, 200);
-			RenderSystem.enableBlend();
-			ThemeProperties.CHECK_ICON.get().draw(graphics, x + w - 9, y + 1, 8, 8);
-			poseStack.popPose();
+		Matrix3x2fStack poseStack = graphics.pose();
+		if (FTBQuestsClient.getClientPlayerData().isCompleted(task)) {
+			poseStack.pushMatrix();
+			poseStack.translate(0, 0);
+			IconHelper.renderIcon(ThemeProperties.CHECK_ICON.get(), graphics, x + w - 9, y + 1, 8, 8);
+			poseStack.popMatrix();
 		} else {
 			MutableComponent buttonText = task.getButtonText();
 			if (!TextUtils.isComponentEmpty(buttonText)) {
-				poseStack.pushPose();
-				poseStack.translate(x + 19F - theme.getStringWidth(buttonText) / 2F, y + 15F, 200F);
-				poseStack.scale(0.5F, 0.5F, 1F);
-				RenderSystem.enableBlend();
+				poseStack.pushMatrix();
+				poseStack.translate(x + 19F - theme.getStringWidth(buttonText) / 2F, y + 15F);
+				poseStack.scale(0.5F, 0.5F);
 				theme.drawString(graphics, buttonText, 0, 0, Color4I.WHITE, Theme.SHADOW);
-				poseStack.popPose();
+				poseStack.popMatrix();
 			}
 		}
 	}
@@ -263,7 +254,7 @@ public class TaskButton extends Button {
 					.map(t -> getTheme().getStringWidth(t.location().toString()))
 					.max(Comparator.naturalOrder())
 					.orElse(100);
-			setSize(Math.max(titleW, w) + 20, getScreen().getGuiScaledHeight() * 3 / 4);
+			setSize(Math.max(titleW, w) + 20, getWindow().getGuiScaledHeight() * 3 / 4);
 
 			return true;
 		}
@@ -295,9 +286,9 @@ public class TaskButton extends Button {
 			@Override
 			public void drawBackground(GuiGraphics graphics, Theme theme, int x, int y, int w, int h) {
 				if (isMouseOver) {
-					Color4I.WHITE.withAlpha(30).draw(graphics, x, y, w, h);
+					IconHelper.renderIcon(Color4I.WHITE.withAlpha(30), graphics, x, y, w, h);
 				}
-				Color4I.GRAY.withAlpha(40).draw(graphics, x, y + h, w, 1);
+				IconHelper.renderIcon(Color4I.GRAY.withAlpha(40), graphics, x, y + h, w, 1);
 			}
 		}
 	}
