@@ -1,40 +1,43 @@
 package dev.ftb.mods.ftbquests.quest;
 
-import dev.ftb.mods.ftblibrary.config.NameMap;
+import net.minecraft.client.Minecraft;
+import net.minecraft.resources.Identifier;
+import net.minecraft.server.packs.resources.Resource;
+
+import dev.ftb.mods.ftblibrary.client.icon.IconRenderer;
 import dev.ftb.mods.ftblibrary.icon.Icon;
 import dev.ftb.mods.ftblibrary.icon.ImageIcon;
 import dev.ftb.mods.ftblibrary.math.PixelBuffer;
+import dev.ftb.mods.ftblibrary.util.Lazy;
+import dev.ftb.mods.ftblibrary.util.NameMap;
 import dev.ftb.mods.ftbquests.api.FTBQuestsAPI;
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.packs.resources.Resource;
+import dev.ftb.mods.ftbquests.client.QuestShapeRenderer;
 
 import java.io.InputStream;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
-public final class QuestShape extends Icon {
+public final class QuestShape extends Icon<QuestShape> {
 	private static final Map<String, QuestShape> MAP = new LinkedHashMap<>();
-	private static QuestShape defaultShape;
+	private static final String DEF_SHAPE = "circle";
+	private static QuestShape defaultShape = new QuestShape(DEF_SHAPE);
 
-	public static NameMap<String> idMap;
-	public static NameMap<String> idMapWithDefault;
+	public static NameMap<String> idMap = NameMap.of(DEF_SHAPE, List.of(DEF_SHAPE)).create();
+	public static NameMap<String> idMapWithDefault = NameMap.of(DEF_SHAPE, List.of(DEF_SHAPE, "default")).create();
 
 	private final String id;
 	private final ImageIcon background, outline, shape;
 	private final boolean shouldDraw;
-	private PixelBuffer shapePixels;
+	private final Lazy<PixelBuffer> shapePixels = Lazy.of(this::makeShapePixels);
 
 	public QuestShape(String id) {
 		this.id = id;
-		background = new ImageIcon(FTBQuestsAPI.rl("textures/shapes/" + this.id + "/background.png"));
-		outline = new ImageIcon(FTBQuestsAPI.rl("textures/shapes/" + this.id + "/outline.png"));
-		shape = new ImageIcon(FTBQuestsAPI.rl("textures/shapes/" + this.id + "/shape.png"));
+		background = new ImageIcon(FTBQuestsAPI.id("textures/shapes/" + this.id + "/background.png"));
+		outline = new ImageIcon(FTBQuestsAPI.id("textures/shapes/" + this.id + "/outline.png"));
+		shape = new ImageIcon(FTBQuestsAPI.id("textures/shapes/" + this.id + "/shape.png"));
 		shouldDraw = !id.equals("none");
 	}
 
@@ -44,9 +47,9 @@ public final class QuestShape extends Icon {
 		list.forEach(s -> MAP.put(s, new QuestShape(s)));
 
 		defaultShape = MAP.values().iterator().next();
-		idMap = NameMap.of(list.get(0), list).baseNameKey("ftbquests.quest.shape").create();
-		list.add(0, "default");
-		idMapWithDefault = NameMap.of(list.get(0), list).baseNameKey("ftbquests.quest.shape").create();
+		idMap = NameMap.of(list.getFirst(), list).baseNameKey("ftbquests.quest.shape").create();
+		list.addFirst("default");
+		idMapWithDefault = NameMap.of(list.getFirst(), list).baseNameKey("ftbquests.quest.shape").create();
 	}
 
 	public static QuestShape get(String id) {
@@ -55,13 +58,6 @@ public final class QuestShape extends Icon {
 
 	public String toString() {
 		return "quest_shape:" + id;
-	}
-
-	@Override
-	@Environment(EnvType.CLIENT)
-	public void draw(GuiGraphics graphics, int x, int y, int w, int h) {
-		background.draw(graphics, x, y, w, h);
-		outline.draw(graphics, x, y, w, h);
 	}
 
 	public ImageIcon getBackground() {
@@ -84,21 +80,13 @@ public final class QuestShape extends Icon {
 		return o == this;
 	}
 
-	public PixelBuffer getShapePixels() {
-		if (shapePixels == null) {
-			try {
-				ResourceLocation shapeLoc = FTBQuestsAPI.rl("textures/shapes/" + id + "/shape.png");
-				Resource resource = Minecraft.getInstance().getResourceManager().getResource(shapeLoc).get();
-				try (InputStream stream = resource.open()) {
-					shapePixels = PixelBuffer.from(stream);
-				}
-			} catch (Exception ex) {
-				shapePixels = new PixelBuffer(1, 1);
-				shapePixels.setRGB(0, 0, 0xFFFFFFFF);
-			}
-		}
+	@Override
+	public IconRenderer<QuestShape> getRenderer() {
+		return QuestShapeRenderer.INSTANCE;
+	}
 
-		return shapePixels;
+	public PixelBuffer getShapePixels() {
+		return shapePixels.get();
 	}
 
 	public boolean shouldDraw() {
@@ -107,5 +95,27 @@ public final class QuestShape extends Icon {
 
 	public static Map<String,QuestShape> map() {
 		return Collections.unmodifiableMap(MAP);
+	}
+
+	private PixelBuffer makeShapePixels() {
+		try {
+			Identifier shapeLoc = FTBQuestsAPI.id("textures/shapes/" + id + "/shape.png");
+			Optional<Resource> opt = Minecraft.getInstance().getResourceManager().getResource(shapeLoc);
+			if (opt.isPresent()) {
+				try (InputStream stream = opt.get().open()) {
+					return PixelBuffer.from(stream);
+				}
+			} else {
+				return emptyBuffer();
+			}
+		} catch (Exception ex) {
+			return emptyBuffer();
+		}
+	}
+
+	private static PixelBuffer emptyBuffer() {
+		PixelBuffer res = new PixelBuffer(1, 1);
+		res.setRGB(0, 0, 0xFFFFFFFF);
+		return res;
 	}
 }
